# gallery-website

./: .env  .gitignore  Cargo.toml  tailwind.config.js
migrations/: 20220605090835_init.sql
src/: main.rs
templates/: index.html
