[package]
name = "gallery-website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.6"
color-eyre = "0.6.1"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tera = "1.15.0"
tokio = { version = "1.19.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
kamadak-exif = "0.5.4"
